--- a/src/components/ProjectForm.module.css
+++ b/src/components/ProjectForm.module.css
@@ -55,6 +55,14 @@
   color: white;
 }
 
+.dialogSurface {
+  max-width: 700px;
+  width: 90vw;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+
 .form {
   padding: 1.5rem;
   display: flex;
