--- a/src/components/views/ExecutiveView.module.css
+++ b/src/components/views/ExecutiveView.module.css
@@ -4,6 +4,13 @@
   animation: fadeIn 0.5s ease-in-out;
 }
 
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+}
+
 .header {
   margin-bottom: 2rem;
 }
@@ -31,6 +38,10 @@
   color: var(--foreground);
   opacity: 0.7;
   margin: 0.25rem 0 0 0;
+}
+
+.errorMessage {
+  margin-bottom: 1rem;
 }
 
 .kpiGrid {
